(env (dev (flags (:standard -w -a))))

(rule
 (targets count.ml count_main.ml)
 (deps (:zl count.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o count_main %{zl})))

(rule
 (targets derivative.ml derivative_main.ml)
 (deps (:zl derivative.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o derivative_main %{zl})))

(rule
 (targets discontinuity.ml discontinuity_main.ml)
 (deps (:zl discontinuity.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o discontinuity_main %{zl})))

(rule
 (targets div_by_zero.ml div_by_zero_main.ml)
 (deps (:zl div_by_zero.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o div_by_zero_main %{zl})))

(rule
 (targets euler_forward_error.ml euler_forward_error_main.ml)
 (deps (:zl euler_forward_error.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o euler_forward_error_main %{zl})))

(rule
 (targets hardstop_integr.ml hardstop_integr_main.ml)
 (deps (:zl hardstop_integr.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o hardstop_integr_main %{zl})))

(rule
 (targets heatingh20.ml heatingh20_main.ml)
 (deps (:zl heatingh20.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o heatingh20_main %{zl})))

(rule
 (targets hybridaut.ml hybridaut_main.ml)
 (deps (:zl hybridaut.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o hybridaut_main %{zl})))

(rule
 (targets input_window.ml input_window_main.ml)
 (deps (:zl input_window.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o input_window_main %{zl})))

(rule
 (targets instable.ml instable_main.ml)
 (deps (:zl instable.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o instable_main %{zl})))

; (rule
;  (targets int_of_float.ml int_of_float_main.ml)
;  (deps (:zl int_of_float.zls) (package zelus) (package zelus-gtk))
;  (action (run zeluc -gtk2 -s main -o int_of_float_main %{zl})))

(rule
 (targets integrales_compliquees.ml integrales_compliquees_main.ml)
 (deps (:zl integrales_compliquees.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o integrales_compliquees_main %{zl})))

(rule
 (targets khalil.ml khalil_main.ml)
 (deps (:zl khalil.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o khalil_main %{zl})))

; (rule
;  (targets match_seesaw.ml match_seesaw_main.ml)
;  (deps (:zl match_seesaw.zls) (package zelus) (package zelus-gtk))
;  (action (run zeluc -gtk2 -s main -o match_seesaw_main %{zl})))

(rule
 (targets ode_non_lipshitz.ml ode_non_lipshitz_main.ml)
 (deps (:zl ode_non_lipshitz.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o ode_non_lipshitz_main %{zl})))

(rule
 (targets sincos.ml sincos_main.ml)
 (deps (:zl sincos.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o sincos_main %{zl})))

; (rule
;  (targets sliding.ml sliding_main.ml)
;  (deps (:zl sliding.zls) (package zelus) (package zelus-gtk))
;  (action (run zeluc -gtk2 -s main -o sliding_main %{zl})))

(rule
 (targets sqrt.ml sqrt_main.ml)
 (deps (:zl sqrt.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o sqrt_main %{zl})))

(rule
 (targets suspend01.ml suspend01_main.ml)
 (deps (:zl suspend01.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o suspend01_main %{zl})))

(rule
 (targets tabledep.ml tabledep_main.ml)
 (deps (:zl tabledep.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o tabledep_main %{zl})))

(rule
 (targets updown.ml updown_main.ml)
 (deps (:zl updown.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o updown_main %{zl})))

(rule
 (targets water.ml water_main.ml)
 (deps (:zl water.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o water_main %{zl})))

(rule
 (targets ysquared.ml ysquared_main.ml)
 (deps (:zl ysquared.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o ysquared_main %{zl})))

(rule
 (targets zero.ml zero_main.ml)
 (deps (:zl zero.zls) unsafe.zli (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -deps -s main -o zero_main %{zl})))

(executables
  (names count_main derivative_main discontinuity_main div_by_zero_main euler_forward_error_main hardstop_integr_main heatingh20_main hybridaut_main input_window_main instable_main integrales_compliquees_main khalil_main ode_non_lipshitz_main sincos_main sqrt_main suspend01_main tabledep_main updown_main water_main ysquared_main zero_main
  ;int_of_float match_seesaw sliding 
  )
  (libraries lablgtk2 zelus zelus-gtk)
  (promote (until-clean)))







