(env (dev (flags (:standard -w -a))))

(rule
 (targets stick_slip_friction.ml stick_slip_friction_main.ml)
 (deps (:zl stick_slip_friction.zls) (package zelus) (package zelus-gtk))
 (action (run zeluc -gtk2 -s main -o stick_slip_friction_main %{zl})))

(executable
  (name stick_slip_friction_main)
  (libraries lablgtk2 zelus zelus-gtk)
  (promote (until-clean)))