(env (dev (flags (:standard -w -a))))

(rule
 (targets stickysprings.ml stickysprings_main.ml) 
 (deps (:zl stickysprings.zls) world.zli (package zelus) (package zelus-gtk))
 (action (run zeluc -deps -gtk2 -sampling 9 -s main -o stickysprings_main %{zl})))

(executables
  (names stickysprings_main)
  (libraries lablgtk2 zelus zelus-gtk)
  (promote (until-clean)))
